--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "babel-node  server.js"
+    "start": "babel-node  server.js",
+    "custom": "NODE_ENV=custom babel-node server.js"
   },
   "author": "",
   "license": "ISC",
