--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jsdom": "^9.4.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
-    "react-lite":"^0.15.16"
+    "react-lite":"^0.15.16",
+    "1.0.3":"^1.0.3"
   },
   "devDependencies": {
     "babel": "^5.8.25",
