--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "babel-node  server.js",
     "chapter1": "NODE_ENV=custom CHAPTER=1 babel-node server.js",
-    "chapter2": "NODE_ENV=custom CHAPTER=2 babel-node server.js"
+    "chapter2": "NODE_ENV=custom CHAPTER=2 babel-node server.js",
+    "chapter3": "NODE_ENV=custom CHAPTER=3 babel-node server.js"
   },
   "author": "",
   "license": "ISC",
