--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "babel-node  server.js",
     "chapter1": "NODE_ENV=custom CHAPTER=1 babel-node server.js",
     "chapter2": "NODE_ENV=custom CHAPTER=2 babel-node server.js",
-    "chapter3": "NODE_ENV=custom CHAPTER=3 babel-node server.js"
+    "chapter3": "NODE_ENV=custom CHAPTER=3 babel-node server.js",
+    "chapter4": "NODE_ENV=custom CHAPTER=4 babel-node server.js"
   },
   "author": "",
   "license": "ISC",
