--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "babel-node  server.js"
+    "start": "babel-node server.js",
+    "deploy": "rm -rf dist && NODE_ENV=production webpack --config ./webpack.deploy.js --progress --profile --colors"
   },
   "author": "",
   "license": "ISC",
